src/main/resources/k8s/market-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-ingress
  namespace: market
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: billing-svc
                port:
                  number: 80
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-svc
                port:
                  number: 80
